# affordability_nz

./: .gitattributes  .gitignore  .gitignore.save  Pipfile  README.rst  about.html  about.pyml  base.pyml  canterbury.html  canterbury.pyml  index.html  index.pyml  pavement.py  pyproject.toml  requirements.txt  ui.pyml  wellington.html  wellington.pyml
affordability/: constants.py  main.py
css/: style.css  style.sass
css/commute-icons/: demo.html
data/: rental_area_points.geojson
data/auckland/: auto_matrix.csv  bicycle_matrix.csv  commute_costs.json  multimodal_matrix.csv  pedestrian_matrix.csv  rental_areas.geojson  rental_points.geojson  rents.json  transit_commutes.csv  transit_costs.csv  (+3 more)
docs/: CNAME  about.html  canterbury.html  index.html  wellington.html
ipynb/: Untitled.ipynb  commute_costs.ipynb  commute_distances.ipynb  commute_distances_and_durations.ipynb  jsonize.ipynb  jsonize_rents_and_commutes.ipynb  prototyping.ipynb  shapes_and_rents.ipynb  transit_costs.ipynb  wrangle_rents.ipynb  wrangle_shapes.ipynb  wrangle_transit_costs.ipynb
js/: map.js  map.pyj
notebooks/: helpers.py  prepare_geodata.ipynb
py/: explore_rent_time_series.ipynb  helpers.py  jsonize_rents_and_commutes.ipynb  prepare_rents.ipynb  rent_time_series.ipynb  wrangle_commutes.ipynb  wrangle_commutes_and_commute_costs.ipynb  wrangle_rents.ipynb  wrangle_shapes.ipynb  wrangle_transit_costs.ipynb
rapyd/: about.html  about.pyml  canterbury.html  canterbury.pyml  index.html  index.pyml  map.js  map.pyj  style.css  style.sass  ui.pyml  wellington.html  wellington.pyml
(+64 files in other folders)
