[tool.poetry]
name = "affordability_nz"
version = "0.4.3"
description = "Web maps of affordability for various regions of New Zealand (NZ), focusing on rent and commute costs relative to income."
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
geopandas = "^0.4.0"
paver = "^1.3"
jupyter = "^1.0"
rtree = "^0.8.3"
requests = "^2.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
