[tool.poetry]
name = "affordability_nz"
version = "0.5.0"
description = "Web maps of affordability for various regions of New Zealand (NZ), focusing on rent and commute costs relative to income."
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6|^3.7|^3.8"

[tool.poetry.dev-dependencies]
geopandas = "<1"
jupyter = "^1.0"
rtree = "<1.0"
requests = "<3"
requests-html = "<1"
plotly = "<5"
watchdog = "^0.10.2"
PySCSS = "^1.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
